internal/parser/simplesql_parser.go
// Code generated from SimpleSql.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // SimpleSql
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'('", "')'", "'create'", "'insert'", "'select'", "'update'", "'delete'",
	"'from'", "'set'", "'where'", "'into'", "'values'", "'table'", "'index'",
	"'view'", "'as'", "'on'", "'int'", "'varchar'", "'and'", "'or'", "'*'",
	"'='", "'!='", "','", "';'",
}
var symbolicNames = []string{
	"", "", "", "CREATE_", "INSERT_", "SELECT_", "UPDATE_", "DELETE_", "FROM_",
	"SET_", "WHERE_", "INTO_", "VALUES_", "TABLE_", "INDEX_", "VIEW_", "AS_",
	"ON_", "INT_", "VAR_CHAR_", "AND_", "OR_", "STAR", "EQUAL", "NOT_EQUAL",
	"COMMA", "SEMI_COLON", "IDENT", "INT_LITERAL", "STR_LITERAL", "SPACES",
}

var ruleNames = []string{
	"parse", "statementList", "statement", "create_table_stmt", "field_specs",
	"field_spec", "type_spec", "varchar_spec", "insert_stmt", "constant_list",
	"select_stmt", "ident_list", "update_stmt", "update_expr_list", "update_expr",
	"delete_stmt", "create_view_stmt", "create_index_stmt", "condition", "term",
	"expression", "literal",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SimpleSqlParser struct {
	*antlr.BaseParser
}

func NewSimpleSqlParser(input antlr.TokenStream) *SimpleSqlParser {
	this := new(SimpleSqlParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SimpleSql.g4"

	return this
}

// SimpleSqlParser tokens.
const (
	SimpleSqlParserEOF         = antlr.TokenEOF
	SimpleSqlParserT__0        = 1
	SimpleSqlParserT__1        = 2
	SimpleSqlParserCREATE_     = 3
	SimpleSqlParserINSERT_     = 4
	SimpleSqlParserSELECT_     = 5
	SimpleSqlParserUPDATE_     = 6
	SimpleSqlParserDELETE_     = 7
	SimpleSqlParserFROM_       = 8
	SimpleSqlParserSET_        = 9
	SimpleSqlParserWHERE_      = 10
	SimpleSqlParserINTO_       = 11
	SimpleSqlParserVALUES_     = 12
	SimpleSqlParserTABLE_      = 13
	SimpleSqlParserINDEX_      = 14
	SimpleSqlParserVIEW_       = 15
	SimpleSqlParserAS_         = 16
	SimpleSqlParserON_         = 17
	SimpleSqlParserINT_        = 18
	SimpleSqlParserVAR_CHAR_   = 19
	SimpleSqlParserAND_        = 20
	SimpleSqlParserOR_         = 21
	SimpleSqlParserSTAR        = 22
	SimpleSqlParserEQUAL       = 23
	SimpleSqlParserNOT_EQUAL   = 24
	SimpleSqlParserCOMMA       = 25
	SimpleSqlParserSEMI_COLON  = 26
	SimpleSqlParserIDENT       = 27
	SimpleSqlParserINT_LITERAL = 28
	SimpleSqlParserSTR_LITERAL = 29
	SimpleSqlParserSPACES      = 30
)

// SimpleSqlParser rules.
const (
	SimpleSqlParserRULE_parse             = 0
	SimpleSqlParserRULE_statementList     = 1
	SimpleSqlParserRULE_statement         = 2
	SimpleSqlParserRULE_create_table_stmt = 3
	SimpleSqlParserRULE_field_specs       = 4
	SimpleSqlParserRULE_field_spec        = 5
	SimpleSqlParserRULE_type_spec         = 6
	SimpleSqlParserRULE_varchar_spec      = 7
	SimpleSqlParserRULE_insert_stmt       = 8
	SimpleSqlParserRULE_constant_list     = 9
	SimpleSqlParserRULE_select_stmt       = 10
	SimpleSqlParserRULE_ident_list        = 11
	SimpleSqlParserRULE_update_stmt       = 12
	SimpleSqlParserRULE_update_expr_list  = 13
	SimpleSqlParserRULE_update_expr       = 14
	SimpleSqlParserRULE_delete_stmt       = 15
	SimpleSqlParserRULE_create_view_stmt  = 16
	SimpleSqlParserRULE_create_index_stmt = 17
	SimpleSqlParserRULE_condition         = 18
	SimpleSqlParserRULE_term              = 19
	SimpleSqlParserRULE_expression        = 20
	SimpleSqlParserRULE_literal           = 21
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_parse
	return p
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserEOF, 0)
}

func (s *ParseContext) AllStatementList() []IStatementListContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementListContext)(nil)).Elem())
	var tst = make([]IStatementListContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementListContext)
		}
	}

	return tst
}

func (s *ParseContext) StatementList(i int) IStatementListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementListContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitParse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SimpleSqlParserRULE_parse)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SimpleSqlParserCREATE_)|(1<<SimpleSqlParserINSERT_)|(1<<SimpleSqlParserSELECT_)|(1<<SimpleSqlParserUPDATE_)|(1<<SimpleSqlParserDELETE_))) != 0 {
		{
			p.SetState(44)
			p.StatementList()
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(50)
		p.Match(SimpleSqlParserEOF)
	}

	return localctx
}

// IStatementListContext is an interface to support dynamic dispatch.
type IStatementListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementListContext differentiates from other interfaces.
	IsStatementListContext()
}

type StatementListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementListContext() *StatementListContext {
	var p = new(StatementListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_statementList
	return p
}

func (*StatementListContext) IsStatementListContext() {}

func NewStatementListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementListContext {
	var p = new(StatementListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_statementList

	return p
}

func (s *StatementListContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementListContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *StatementListContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *StatementListContext) AllSEMI_COLON() []antlr.TerminalNode {
	return s.GetTokens(SimpleSqlParserSEMI_COLON)
}

func (s *StatementListContext) SEMI_COLON(i int) antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserSEMI_COLON, i)
}

func (s *StatementListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitStatementList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) StatementList() (localctx IStatementListContext) {
	localctx = NewStatementListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SimpleSqlParserRULE_statementList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Statement()
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SimpleSqlParserSEMI_COLON {
		{
			p.SetState(53)
			p.Match(SimpleSqlParserSEMI_COLON)
		}
		{
			p.SetState(54)
			p.Statement()
		}

		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Create_table_stmt() ICreate_table_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_table_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_table_stmtContext)
}

func (s *StatementContext) Insert_stmt() IInsert_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInsert_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInsert_stmtContext)
}

func (s *StatementContext) Select_stmt() ISelect_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelect_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelect_stmtContext)
}

func (s *StatementContext) Update_stmt() IUpdate_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUpdate_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUpdate_stmtContext)
}

func (s *StatementContext) Delete_stmt() IDelete_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDelete_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDelete_stmtContext)
}

func (s *StatementContext) Create_view_stmt() ICreate_view_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_view_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_view_stmtContext)
}

func (s *StatementContext) Create_index_stmt() ICreate_index_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_index_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_index_stmtContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SimpleSqlParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.Create_table_stmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(61)
			p.Insert_stmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(62)
			p.Select_stmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(63)
			p.Update_stmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(64)
			p.Delete_stmt()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(65)
			p.Create_view_stmt()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(66)
			p.Create_index_stmt()
		}

	}

	return localctx
}

// ICreate_table_stmtContext is an interface to support dynamic dispatch.
type ICreate_table_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreate_table_stmtContext differentiates from other interfaces.
	IsCreate_table_stmtContext()
}

type Create_table_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreate_table_stmtContext() *Create_table_stmtContext {
	var p = new(Create_table_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_create_table_stmt
	return p
}

func (*Create_table_stmtContext) IsCreate_table_stmtContext() {}

func NewCreate_table_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Create_table_stmtContext {
	var p = new(Create_table_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_create_table_stmt

	return p
}

func (s *Create_table_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Create_table_stmtContext) CREATE_() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserCREATE_, 0)
}

func (s *Create_table_stmtContext) TABLE_() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserTABLE_, 0)
}

func (s *Create_table_stmtContext) IDENT() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserIDENT, 0)
}

func (s *Create_table_stmtContext) Field_specs() IField_specsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_specsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IField_specsContext)
}

func (s *Create_table_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Create_table_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Create_table_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitCreate_table_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Create_table_stmt() (localctx ICreate_table_stmtContext) {
	localctx = NewCreate_table_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SimpleSqlParserRULE_create_table_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Match(SimpleSqlParserCREATE_)
	}
	{
		p.SetState(70)
		p.Match(SimpleSqlParserTABLE_)
	}
	{
		p.SetState(71)
		p.Match(SimpleSqlParserIDENT)
	}
	{
		p.SetState(72)
		p.Match(SimpleSqlParserT__0)
	}
	{
		p.SetState(73)
		p.Field_specs()
	}
	{
		p.SetState(74)
		p.Match(SimpleSqlParserT__1)
	}

	return localctx
}

// IField_specsContext is an interface to support dynamic dispatch.
type IField_specsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_specsContext differentiates from other interfaces.
	IsField_specsContext()
}

type Field_specsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_specsContext() *Field_specsContext {
	var p = new(Field_specsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_field_specs
	return p
}

func (*Field_specsContext) IsField_specsContext() {}

func NewField_specsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_specsContext {
	var p = new(Field_specsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_field_specs

	return p
}

func (s *Field_specsContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_specsContext) AllField_spec() []IField_specContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IField_specContext)(nil)).Elem())
	var tst = make([]IField_specContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IField_specContext)
		}
	}

	return tst
}

func (s *Field_specsContext) Field_spec(i int) IField_specContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_specContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IField_specContext)
}

func (s *Field_specsContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(SimpleSqlParserCOMMA)
}

func (s *Field_specsContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserCOMMA, i)
}

func (s *Field_specsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_specsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Field_specsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitField_specs(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Field_specs() (localctx IField_specsContext) {
	localctx = NewField_specsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SimpleSqlParserRULE_field_specs)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Field_spec()
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SimpleSqlParserCOMMA {
		{
			p.SetState(77)
			p.Match(SimpleSqlParserCOMMA)
		}
		{
			p.SetState(78)
			p.Field_spec()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IField_specContext is an interface to support dynamic dispatch.
type IField_specContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_specContext differentiates from other interfaces.
	IsField_specContext()
}

type Field_specContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_specContext() *Field_specContext {
	var p = new(Field_specContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_field_spec
	return p
}

func (*Field_specContext) IsField_specContext() {}

func NewField_specContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_specContext {
	var p = new(Field_specContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_field_spec

	return p
}

func (s *Field_specContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_specContext) IDENT() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserIDENT, 0)
}

func (s *Field_specContext) Type_spec() IType_specContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IType_specContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IType_specContext)
}

func (s *Field_specContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_specContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Field_specContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitField_spec(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Field_spec() (localctx IField_specContext) {
	localctx = NewField_specContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SimpleSqlParserRULE_field_spec)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.Match(SimpleSqlParserIDENT)
	}
	{
		p.SetState(85)
		p.Type_spec()
	}

	return localctx
}

// IType_specContext is an interface to support dynamic dispatch.
type IType_specContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsType_specContext differentiates from other interfaces.
	IsType_specContext()
}

type Type_specContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyType_specContext() *Type_specContext {
	var p = new(Type_specContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_type_spec
	return p
}

func (*Type_specContext) IsType_specContext() {}

func NewType_specContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Type_specContext {
	var p = new(Type_specContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimpleSqlParserRULE_type_spec

	return p
}

func (s *Type_specContext) GetParser() antlr.Parser { return s.parser }

func (s *Type_specContext) INT_() antlr.TerminalNode {
	return s.GetToken(SimpleSqlParserINT_, 0)
}

func (s *Type_specContext) Varchar_spec() IVarchar_specContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarchar_specContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarchar_specContext)
}

func (s *Type_specContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Type_specContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Type_specContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SimpleSqlVisitor:
		return t.VisitType_spec(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SimpleSqlParser) Type_spec() (localctx IType_specContext) {
	localctx = NewType_specContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, SimpleSqlParserRULE_type_spec)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(89)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SimpleSqlParserINT_:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(87)
			p.Match(SimpleSqlParserINT_)
		}

	case SimpleSqlParserVAR_CHAR_:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(88)
			p.Varchar_spec()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IVarchar_specContext is an interface to support dynamic dispatch.
type IVarchar_specContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarchar_specContext differentiates from other interfaces.
	IsVarchar_specContext()
}

type Varchar_specContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarchar_specContext() *Varchar_specContext {
	var p = new(Varchar_specContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimpleSqlParserRULE_varchar_spec
	return p
}
